// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`on mount on landscape orientation matches snapshot 1`] = `
<PaneContainer
  data-portrait="false"
  style={
    Object {
      "height": "auto",
      "minWidth": 400,
      "width": 400,
    }
  }
>
  <DraggingEdge
    aria-grabbed={false}
    aria-orientation="vertical"
    data-portrait="false"
    onMouseDown={[Function]}
    role="seperator"
  />
</PaneContainer>
`;

exports[`on mount on portrait orientation matches snapshot 1`] = `
<PaneContainer
  data-portrait="true"
  style={
    Object {
      "height": 400,
      "minHeight": 400,
      "width": "auto",
    }
  }
>
  <DraggingEdge
    aria-grabbed={false}
    aria-orientation="horizontal"
    data-portrait="true"
    onMouseDown={[Function]}
    role="seperator"
  />
</PaneContainer>
`;
